#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(arowpp, 0.07, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([src/arow_learn.cc])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AM_PROG_LIBTOOL
AC_ISC_POSIX
AC_LANG_CPLUSPLUS
AC_LANG(C++)

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h sys/time.h sys/types.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T
AC_CHECK_SIZEOF(char)
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)
AC_CHECK_SIZEOF(size_t)

AC_HEADER_TIME

# Checks for library functions.
AC_CHECK_FUNCS([gettimeofday])

# Enable -Werror
AC_ARG_ENABLE(werror,
[AS_HELP_STRING([--enable-werror],
    [enable -Werror])], [],
    [enable_werror=yes])
case ${enable_werror} in
  yes) WERROR_FLAG="-Werror" ;;
    *) WERROR_FLAG="" ;;
esac
AC_SUBST(WERROR_FLAG)

dnl AM_CONDITIONAL(GCC, test "$GCC" = yes)   # let the Makefile know if we're gcc
if test -n "$GCC"; then
   CFLAGS="-O3 -Wall "$WERROR_FLAG" "
   CXXFLAGS="-O3 -Wall "$WERROR_FLAG" "
fi

AC_PROG_INSTALL
GTEST_LIB_CHECK(1.0)

AC_OUTPUT([Makefile src/Makefile sample/Makefile])
